--- a/main.html
+++ b/main.html
@@ -1,16 +1,139 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Shopping Cart</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <style>
+    /* Block Heading */
+    .block-heading {
+      text-align: center;
+      margin-bottom: 40px;
+      color: #3b99e0;
+    }
+
+    /* Product Block */
+    .product {
+      border-bottom: 1px solid #e0e0e0;
+      padding: 15px 0;
+    }
+
+    /* Summary Block */
+    .summary {
+      border-top: 2px solid #5ea4f3;
+      background-color: #f7fbff;
+      padding: 20px;
+    }
+
+    .summary h5 {
+      margin-top: 0;
+      font-weight: 600;
+    }
+
+    .summary .btn {
+      background-color: #3b99e0;
+      color: #fff;
+      font-weight: bold;
+      border: none;
+      width: 100%;
+      padding: 10px;
+    }
+
+    .summary .btn:hover {
+      background-color: #327dc2;
+    }
+
+    .summary .border-bottom {
+      padding-bottom: 10px;
+      margin-bottom: 10px;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <div class="container py-5">
+    <!-- Heading -->
+    <div class="block-heading">
+      <h2>Shopping Cart</h2>
+    </div>
 
+    <div class="row">
+      <!-- Cart Items -->
+      <div class="col-lg-8">
+        <!-- Product 1 -->
+        <div class="product">
+          <div class="row align-items-center">
+            <div class="col-3">
+              <img src="https://via.placeholder.com/100" class="img-fluid" alt="Product">
+            </div>
+            <div class="col-6">
+              <h6 class="mb-1">Product Name</h6>
+              <p class="text-muted small">Short description goes here</p>
+            </div>
+            <div class="col-3 text-end">
+              <span class="fw-bold">$49</span>
+            </div>
+          </div>
+        </div>
+
+        <!-- Product 2 -->
+        <div class="product">
+          <div class="row align-items-center">
+            <div class="col-3">
+              <img src="https://via.placeholder.com/100" class="img-fluid" alt="Product">
+            </div>
+            <div class="col-6">
+              <h6 class="mb-1">Another Product</h6>
+              <p class="text-muted small">Short description goes here</p>
+            </div>
+            <div class="col-3 text-end">
+              <span class="fw-bold">$35</span>
+            </div>
+          </div>
+        </div>
+
+        <!-- Product 3 -->
+        <div class="product">
+          <div class="row align-items-center">
+            <div class="col-3">
+              <img src="https://via.placeholder.com/100" class="img-fluid" alt="Product">
+            </div>
+            <div class="col-6">
+              <h6 class="mb-1">Third Product</h6>
+              <p class="text-muted small">Short description goes here</p>
+            </div>
+            <div class="col-3 text-end">
+              <span class="fw-bold">$20</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Summary -->
+      <div class="col-lg-4">
+        <div class="summary">
+          <h5>Order Summary</h5>
+          <div class="border-bottom d-flex justify-content-between">
+            <span>Subtotal</span>
+            <span>$104</span>
+          </div>
+          <div class="border-bottom d-flex justify-content-between">
+            <span>Shipping</span>
+            <span>$5</span>
+          </div>
+          <div class="d-flex justify-content-between mb-3">
+            <span><strong>Total</strong></span>
+            <span><strong>$109</strong></span>
+          </div>
+          <button class="btn">Checkout</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
