--- a/main.html
+++ b/main.html
@@ -2,138 +2,101 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shopping Cart</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    /* Block Heading */
     .block-heading {
       text-align: center;
-      margin-bottom: 40px;
       color: #3b99e0;
+      margin: 20px 0;
     }
 
-    /* Product Block */
     .product {
-      border-bottom: 1px solid #e0e0e0;
-      padding: 15px 0;
+      border: 1px solid #ddd;
+      padding: 15px;
+      margin-bottom: 15px;
     }
 
-    /* Summary Block */
     .summary {
-      border-top: 2px solid #5ea4f3;
       background-color: #f7fbff;
+      border-top: 3px solid #5ea4f3;
       padding: 20px;
+      margin-bottom: 20px;
     }
 
-    .summary h5 {
-      margin-top: 0;
-      font-weight: 600;
-    }
-
-    .summary .btn {
+    .summary button {
       background-color: #3b99e0;
-      color: #fff;
-      font-weight: bold;
+      color: white;
       border: none;
+      padding: 10px 20px;
       width: 100%;
-      padding: 10px;
+      margin-top: 10px;
     }
 
-    .summary .btn:hover {
-      background-color: #327dc2;
-    }
-
-    .summary .border-bottom {
-      padding-bottom: 10px;
-      margin-bottom: 10px;
+    .summary button:hover {
+      background-color: #2a78c0;
     }
   </style>
 </head>
 <body>
-  <div class="container py-5">
-    <!-- Heading -->
+  <div class="container my-4">
+    <!-- Block Heading -->
     <div class="block-heading">
-      <h2>Shopping Cart</h2>
+      <h2>Your Shopping Cart</h2>
+      <p>Review your items before checkout</p>
+      <a href="#" class="btn btn-link">Continue Shopping</a>
     </div>
 
     <div class="row">
-      <!-- Cart Items -->
+      <!-- Product List Column -->
       <div class="col-lg-8">
-        <!-- Product 1 -->
+        <!-- Product Block 1 -->
         <div class="product">
           <div class="row align-items-center">
-            <div class="col-3">
-              <img src="https://via.placeholder.com/100" class="img-fluid" alt="Product">
+            <div class="col-md-4">
+              <img src="https://via.placeholder.com/150" class="img-fluid mb-2" alt="Product 1">
+              <img src="https://via.placeholder.com/150" class="img-fluid mb-2" alt="Product 1">
+              <img src="https://via.placeholder.com/150" class="img-fluid" alt="Product 1">
             </div>
-            <div class="col-6">
-              <h6 class="mb-1">Product Name</h6>
-              <p class="text-muted small">Short description goes here</p>
-            </div>
-            <div class="col-3 text-end">
-              <span class="fw-bold">$49</span>
+            <div class="col-md-8">
+              <h5>Product Name 1</h5>
+              <p>Product description goes here.</p>
+              <p><strong>Price:</strong> $49.99</p>
             </div>
           </div>
         </div>
 
-        <!-- Product 2 -->
+        <!-- Product Block 2 -->
         <div class="product">
           <div class="row align-items-center">
-            <div class="col-3">
-              <img src="https://via.placeholder.com/100" class="img-fluid" alt="Product">
+            <div class="col-md-4">
+              <img src="https://via.placeholder.com/150" class="img-fluid mb-2" alt="Product 2">
+              <img src="https://via.placeholder.com/150" class="img-fluid mb-2" alt="Product 2">
+              <img src="https://via.placeholder.com/150" class="img-fluid" alt="Product 2">
             </div>
-            <div class="col-6">
-              <h6 class="mb-1">Another Product</h6>
-              <p class="text-muted small">Short description goes here</p>
-            </div>
-            <div class="col-3 text-end">
-              <span class="fw-bold">$35</span>
-            </div>
-          </div>
-        </div>
-
-        <!-- Product 3 -->
-        <div class="product">
-          <div class="row align-items-center">
-            <div class="col-3">
-              <img src="https://via.placeholder.com/100" class="img-fluid" alt="Product">
-            </div>
-            <div class="col-6">
-              <h6 class="mb-1">Third Product</h6>
-              <p class="text-muted small">Short description goes here</p>
-            </div>
-            <div class="col-3 text-end">
-              <span class="fw-bold">$20</span>
+            <div class="col-md-8">
+              <h5>Product Name 2</h5>
+              <p>Product description goes here.</p>
+              <p><strong>Price:</strong> $79.99</p>
             </div>
           </div>
         </div>
       </div>
 
-      <!-- Summary -->
+      <!-- Summary Column -->
       <div class="col-lg-4">
         <div class="summary">
-          <h5>Order Summary</h5>
-          <div class="border-bottom d-flex justify-content-between">
-            <span>Subtotal</span>
-            <span>$104</span>
-          </div>
-          <div class="border-bottom d-flex justify-content-between">
-            <span>Shipping</span>
-            <span>$5</span>
-          </div>
-          <div class="d-flex justify-content-between mb-3">
-            <span><strong>Total</strong></span>
-            <span><strong>$109</strong></span>
-          </div>
-          <button class="btn">Checkout</button>
+          <h4>Order Summary</h4>
+          <p><strong>Subtotal:</strong> $129.98</p>
+          <p><strong>Tax:</strong> $12.00</p>
+          <p><strong>Total:</strong> $141.98</p>
+          <button>Proceed to Checkout</button>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
