--- a/main.html
+++ b/main.html
@@ -51,7 +51,7 @@
     <div class="row">
       <!-- Product List Column -->
       <div class="col-lg-8">
-        <!-- Product Block 1 -->
+        <!-- Single Product Block -->
         <div class="product">
           <div class="row align-items-center">
             <div class="col-md-4">
@@ -66,31 +66,15 @@
             </div>
           </div>
         </div>
-
-        <!-- Product Block 2 -->
-        <div class="product">
-          <div class="row align-items-center">
-            <div class="col-md-4">
-              <img src="https://via.placeholder.com/150" class="img-fluid mb-2" alt="Product 2">
-              <img src="https://via.placeholder.com/150" class="img-fluid mb-2" alt="Product 2">
-              <img src="https://via.placeholder.com/150" class="img-fluid" alt="Product 2">
-            </div>
-            <div class="col-md-8">
-              <h5>Product Name 2</h5>
-              <p>Product description goes here.</p>
-              <p><strong>Price:</strong> $79.99</p>
-            </div>
-          </div>
-        </div>
       </div>
 
       <!-- Summary Column -->
       <div class="col-lg-4">
         <div class="summary">
           <h4>Order Summary</h4>
-          <p><strong>Subtotal:</strong> $129.98</p>
-          <p><strong>Tax:</strong> $12.00</p>
-          <p><strong>Total:</strong> $141.98</p>
+          <p><strong>Subtotal:</strong> $49.99</p>
+          <p><strong>Tax:</strong> $5.00</p>
+          <p><strong>Total:</strong> $54.99</p>
           <button>Proceed to Checkout</button>
         </div>
       </div>
